# jenkinsops

./: .gitignore  Dockerfile  README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirement.txt  validate-submission.sh
environment/: env.py  graders.py  models.py  scenarios.py
server/: app.py
