[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jenkinsops"
version = "2.0.0"
description = "Phase-driven DevOps RL environment. OBSERVE → DIAGNOSE → FIX."
authors = [
    {name = "Sakshi Bhandari", email = "sakshipb88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "gradio"
]

[tool.setuptools.packages.find]
include = ["environment*"]
